--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -10,17 +10,25 @@ jobs:
     name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
+      # Cria o diretório de saída
       - name: Create output directory
         run: mkdir -p dist
+
+      # Gera a animação da cobra
       - uses: Platane/snk@v3
         id: snake-gif
         with:
           github_user_name: DeusDrizzyy
           outputs: svg
           svg_path: dist/github-contribution-grid-snake.svg
+
+      # Publica no GitHub Pages
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          target_branch: output
-          build_dir: dist
+          target_branch: output          # Branch onde será publicado
+          build_dir: dist                # Pasta com os arquivos gerados
+          keep_history: false            # Não mantém histórico de commits
+          allow_empty_commit: true       # Permite commits vazios
+          force_orphan: true             # Força atualização do branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
