--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,34 +1,32 @@
-name: Generate Datas
+name: generate animation
 
 on:
   schedule:
-    - cron: "* */12 * * *"
-  workflow_dispatch:
+    - cron: "0 */24 * * *" 
+  workflow_dispatch: 
+  push:
+    branches:
+    - master  
 
 jobs:
-  build:
-    name: Jobs to update datas
+  generate:
+    permissions: 
+      contents: write
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+    
     steps:
-      # Cria o diretório de saída
-      - name: Create output directory
-        run: mkdir -p dist
-
-      # Gera a animação da cobra
-      - uses: Platane/snk@v3
-        id: snake-gif
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: DeusDrizzyy
-          outputs: svg
-          svg_path: dist/github-contribution-grid-snake.svg
-
-      # Publica no GitHub Pages
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          target_branch: output          # Branch onde será publicado
-          build_dir: dist                # Pasta com os arquivos gerados
-          keep_history: false            # Não mantém histórico de commits
-          allow_empty_commit: true       # Permite commits vazios
-          force_orphan: true             # Força atualização do branch
+          target_branch: output
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
